# RustML

./: .gitignore  .overnight-dev.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  TASK.md
.github/scripts/: pre-push.sh
.github/workflows/: ci.yml  performance.yml  pr-comment.yml
.serena/: project.yml
clustering/: Cargo.toml
clustering/src/: kmeans.rs  lib.rs
coursera_ml/: Cargo.toml  housing.csv
coursera_ml/src/: main.rs
datasets/: Cargo.toml
decision_tree/: Cargo.toml
decision_tree/src/: lib.rs  tree.rs
dimensionality_reduction/: Cargo.toml
dimensionality_reduction/src/: lib.rs  pca.rs
docs/: CI_CD_SETUP.md  CI_INFRASTRUCTURE_FIXES_2025-11-09.md  CSV_INTEGRATION_RESEARCH.md  CSV_QUICK_REFERENCE.md  CSV_RESEARCH_SUMMARY.md  CSV_UPLOAD_WASM_RESEARCH.md  DIOXUS_ML_PLATFORM_GUIDE.md  DIOXUS_PATTERNS_RESEARCH.md  DIOXUS_QUICK_REFERENCE.md  EDUCATIONAL_ML_UI_RESEARCH.md  FRAMEWORK_DOCUMENTATION_RESEARCH.md  FRAMEWORK_QUICK_REFERENCE.md  ML_BEST_PRACTICES_RESEARCH.md  ML_FRAMEWORK_RESEARCH.md  ML_PATTERNS_QUICK_REFERENCE.md  ML_PLAYGROUND_BUGS.md  ML_RESEARCH_SUMMARY.md  OVERNIGHT_DEV_SESSION_2025-11-08.md  OVERNIGHT_DEV_SESSION_2025-11-09.md  OVERNIGHT_DEV_SESSION_2025-11-09_CONTINUED.md  PERFORMANCE_BENCHMARK.md  POLYNOMIAL_REGRESSION_RESEARCH.md  PROGRESS_INDICATOR_DESIGN.md  QUICK_REFERENCE.md  QUICK_WINS_CHECKLIST.md  REVOLUTIONARY_ML_VISUALIZATION_RESEARCH.md  RUST_WASM_ML_BEST_PRACTICES.md  SESSION_SUMMARY_2025-11-07.md  TECHNICAL_BOOK.md  TRAIT_SYSTEM_RESEARCH.md  UI_OVERHAUL_QUICK_REFERENCE.md  WEB_UI_ARCHITECTURE_ANALYSIS.md  WEEK_1_IMPROVEMENT_PLAN.md
docs/issues/: 01-cnn-implementation.md  02-regularization-l1-l2.md  03-kmeans-clustering.md  README.md  advanced-training-features.md  csv-data-upload-feature.md  enhanced-visualization-linear-regression.md  performance-enhancements-large-datasets.md  ux-improvements-csv-training.md
docs/plans/: BOOK_TECHNICAL_PLAN.md
linear_algebra/src/: lib.rs  matrix.rs  statistics.rs  vectors.rs
linear_regression/: Cargo.toml  README.md
linear_regression/src/: lib.rs
loader/: Cargo.toml
loader/src/: csv_loader.rs  (+1 more)
ml_traits/: Cargo.toml
neural_network/: Cargo.toml
plotting/: Cargo.toml  README.md
preprocessing/: Cargo.toml
pyml/: Cargo.toml  pyproject.toml
python_bindings/: Cargo.toml
supervised/: Cargo.toml
web/: Cargo.toml  DIOXUS_CAPABILITIES.md  DIOXUS_QUICK_REFERENCE.md  Dioxus.toml  ML_VISUALIZATION_PATTERNS.md  README.md  RESEARCH_SUMMARY.md  TESTING.md  package-lock.json  package.json  playwright.config.js
web/assets/: main.css
web/playwright-report/: index.html
web/src/: main.rs  routes.rs
web/src/components/: algorithm_arena.rs  algorithm_arena_simple.rs  coefficient_display.rs  correlation_heatmap.rs  csv_upload.rs  feature_importance.rs  linear_regression_visualizer.rs  loss_functions.rs  ml_playground.rs  mod.rs  nav.rs  optimizer_demo.rs  optimizer_race_controller.rs  showcase.rs  view.rs
web/src/components/shared/: algorithm_configurator.rs  data_quality.rs  data_table.rs  error_boundary.rs  feature_selector.rs  mod.rs  model_performance.rs  results_display.rs  summary_stats.rs  validation.rs
web/test-results/: .last-run.json
web/tests/: csv-upload.spec.js  decision-tree-naive-bayes.spec.js  linear-regression-viz.spec.js  ml-playground-audit.spec.js  results-display-integration.spec.js  routes.spec.js  showcase.spec.js
(+30 files in other folders)
