[workspace]
resolver = "3"
members = [ "clustering", "coursera_ml", "datasets", "dimensionality_reduction", "linear_algebra", "linear_regression", "loader", "ml_traits", "neural_network", "notes", "plotting", "python_bindings", "web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
