[workspace]
resolver = "3"
members = [ "clustering", "coursera_ml", "datasets", "decision_tree", "dimensionality_reduction", "linear_algebra", "linear_regression", "loader", "ml_traits", "neural_network", "notes", "plotting", "preprocessing", "python_bindings", "supervised", "web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
