[package]
name = "web"
version = "0.1.0"
authors = ["Brunods10 <brunods1001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
linear_algebra = { path = "../linear_algebra" }
linear_regression = { path = "../linear_regression" }
loader = { path = "../loader" }
neural_network = { path = "../neural_network" }
ml_traits = { path = "../ml_traits" }
clustering = { path = "../clustering" }
dimensionality_reduction = { path = "../dimensionality_reduction" }
preprocessing = { path = "../preprocessing" }
supervised = { path = "../supervised" }
async-std = "1.12"
csv = "1.3"
getrandom = { version = "0.2", features = ["js"] }
three-d = "0.17"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
